Changed dependencies. Changed docker image